# tetris

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  style.css
.github/workflows/: build.yml  deploy_github_page.yml  release.yml
locales/: app.yml
src/: app_state.rs  controller.rs  enum_advance.rs  enum_advance_cycle.rs  enum_iter.rs  game_state.rs  inputs.rs  logo.rs  main.rs  utility.rs
src/audio/: plugin.rs
src/game/: asset.rs  board.rs  consts.rs  das_counter.rs  das_indicator.rs  drop_speed.rs  game.rs  gravity.rs  input_freqency.rs  invisible.rs  level.rs  level_display.rs  leveling.rs  linecap.rs  mod.rs  next_piece_hint.rs  palette.rs  piece.rs  player.rs  plugin.rs  rand.rs  random.rs  render.rs  rng.rs  score.rs  scoring.rs  seed.rs  seeding.rs  spawn.rs  tick.rs  timer.rs  transform.rs  transition.rs  tv_system.rs
src/game_mode_menu/: plugin.rs
src/game_option_menu/: fps_limiter.rs  game_option.rs  mod.rs  plugin.rs  scale_factor.rs  show_fps.rs  transform.rs  window_mode.rs
src/game_screen/: asset.rs  board.rs  game.rs  invisible.rs  linecap.rs  mod.rs  palette.rs  plugin.rs  random.rs  score_display.rs  seed.rs  tetris_flash.rs
src/init/: plugin.rs
src/input/: controller_mapping.rs  mod.rs  player_inputs.rs  plugin.rs
src/language_menu/: plugin.rs
src/level_menu/: mod.rs  plugin.rs  transform.rs
src/loading_screen/: plugin.rs
src/menu/: plugin.rs
src/scale/: plugin.rs
src/settings_menu/: fps_limiter.rs  mod.rs  plugin.rs  scale_factor.rs  setting_name.rs  show_fps.rs  window_mode.rs
src/splash/: plugin.rs  transform.rs
src/splash_screen/: plugin.rs
src/utility/: effect.rs  entity.rs  enum_advance_cycle.rs  format.rs  mod.rs
tetris/: tetris.js
