[package]
name = "tetris"
version = "0.1.0"
edition = "2024"

[features]
default = ["fps_limiter"]
fps_limiter = ["bevy_framepace"]

[dependencies]
bevy = { version = "0.16.0", features = ["vorbis"] }
bevy_dev_tools = "0.16.0"
bevy_framepace = { version = "0.19.1", optional = true }
strum = "0.27"
strum_macros = "0.27"
rand = "0.9"
rand_chacha = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }
image = "0.25"
rust-i18n = "3.1.5"
sys-locale = { version = "0.3.2", features = ["js"] }
winit = "0.30.11"
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[build-dependencies]
winresource = "0.1.22"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
