[package]
name = "tetris"
version = "0.5.0"
edition = "2024"

[features]
default = ["fps_limiter"]
fps_limiter = ["bevy_framepace"]

[dependencies]
bevy = { version = "0.18.0", features = ["vorbis"] }
bevy_dev_tools = "0.18.0"
bevy_framepace = { version = "0.21.0", optional = true }
strum = "0.28"
strum_macros = "0.28"
rand = "0.10"
rand_chacha = "0.10"
getrandom = { version = "0.3", features = ["wasm_js"] }
image = "0.25"
rust-i18n = "3.1.5"
sys-locale = { version = "0.3.2", features = ["js"] }
winit = "0.30.13"

[build-dependencies]
winresource = "0.1.30"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
